--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
              <!-- now empty -->
             </div>
             <div class="text">
-                <h2>Hi, I am MinarulAk</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor alias, quae reprehenderit adipisci praesentium provident inventore! Reiciendis laborum odit iure consequuntur numquam fuga fugiat aspernatur natus quaerat officiis amet temporibus provident doloremque perferendis.</p>
+                <h2>Hi, I am Minarul</h2>
+                <p>Now in 2021 i am a BCA student at JIS COLLEGE OF ENGINEERING in kolyani. I am just trying to learn new technology and I learned a lot of things in computer science or programming. I am very grateful to those who taught me the single thing. </p>
                 <a href="#about-me" class="btn-about">About Me</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas qui quo voluptate similique laborum ad earum,  recusandae quos cupiditate, beatae adipisci aperiam! Voluptatum, veritatis similique.</p>
+                <p>Now in these days i learn many things like <span>web design</span>, <span>solve problem in your windows</span>, <span>youtube manager</span>, <span>beatiful instagram post</span>, If you want to do something with me. then contact me with the link below wahtsapp/email.</p>
                 <div class="social">
                     <a href="https://wa.link/v5coh7" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     <a href="mailto:minarulak88@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
