make some changes

--- a/index.html
+++ b/index.html
@@ -20,26 +20,10 @@
             <ul class="links">
                 <li><a href="#home" class="link active">Home</a></li>
                 <li><a href="#about-me" class="link">About Me</a></li>
-                <li><a href="#contact" class="link">Contact Us</a></li>
-                <li>
-                    <div class="modes">
-                        <label for="mode">Dark mode</label>
-                        <input type="checkbox">
-                        <div class="toggler active">
-                            <div class="ball active"></div>
-                        </div>
-                    </div>
-                </li>
+                <li><a href="#footer" class="link">Contact Us</a></li>
             </ul>
             <div class="mobile-nav">
                 <div class="lines"><i class="fas fa-bars"></i></div>
-            </div>
-            <div class="search">
-               <div class="search-box">
-                <i class="fas fa-search"></i>
-                <i class="fas fa-times hide"></i>
-                <input type="text" class="search-input" placeholder="Search here...">
-               </div>
             </div>
         </div>
         <div class="head">
@@ -50,7 +34,7 @@
                 <h2>Hi, I am Minarul</h2>
                 <p>Now in 2021 i am a BCA student at JIS COLLEGE OF ENGINEERING in kolyani. I am just trying to learn new technology and I learned a lot of things in computer science or programming. I am very grateful to those who taught me the single thing. </p>
                 <a href="#about-me" class="btn-about">About Me</a>
-                <p>Now in these days i learn many things like <span>web design</span>, <span>solve problem in your windows</span>, <span>youtube manager</span>, <span>beatiful instagram post</span>, If you want to do something with me. then contact me with the link below wahtsapp/email.</p>
+                <p>Now in these days i learn many things like <span>web design</span>, <span>solve problem in your windows</span>, <span>youtube manager</span>, <span>beatiful instagram post</span>, If you want to do something through me. then contact me with the link below wahtsapp/email.</p>
                 <div class="social">
                     <a href="https://wa.link/v5coh7" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     <a href="mailto:minarulak88@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
@@ -64,7 +48,7 @@
     </header>
     <section id="User">
         <div class="box animation">
-            <h1>Hi 👋 What's your name? </h1>
+            <h1>Hi Sir,👋 your name please.. </h1>
             <div class="full-name">
                 <div class="first-name name">
                     <label for="firstName">First Name</label>
@@ -79,7 +63,7 @@
         </div>
     </section>
     <section id="about-me" class="page">
-        <h1 class="about-heading section-heading">About Me</h1>
+        <h1 class="about-heading section-heading">This is my Whole life journey</h1>
         <div class="slider-con fade-right">
             <div class="controls">
                 <button class="btn-left">&LeftArrow;</button>
@@ -164,31 +148,13 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="page">
-        <h1 class="contact-heading section-heading">Contact US</h1>
-        <form class="contact-form">
-            <div class="first-name">
-                <label for="firstname">First Name <span style="color: red;">*</span></label>
-                <input type="text" id="firstname" name="firstname">
+    <section id="resume" class="page">
+        <h1 class="resume-heading section-heading">My Resume</h1>
+        <div class="resume">
+            <div class="resume_img">
+                <img src="./img/Minarul_hoque.png" alt="resume" width="700px">
             </div>
-            <div class="last-name">
-                <label for="lastname">Last Name <span style="color: red;">*</span></label>
-                <input type="text" id="lastname" name="lastname">
-            </div>
-            <div class="email">
-                <label for="email">Email <span style="color: red;">*</span></label>
-                <input type="email" id="email" name="email">
-            </div>
-            <div class="city">
-                <label for="city">City</label>
-                <input type="text" id="city" name="city">
-            </div>
-            <div class="query">
-                <label for="query">Query <span style="color: red;">*</span></label>
-                <textarea name="query" id="query"></textarea>
-            </div>
-            <input type="submit" value="Submit">
-        </form>
+        </div>
     </section>
     <footer>
         <div class="custom-shape-divider-top-1629431613">
@@ -196,7 +162,7 @@
                 <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
             </svg>
         </div>
-        <div class="footer">
+        <div id="footer" class="footer">
             <div class="footer-content">
                 <div class="social">
                     <h1>Find me 👉</h1>
